tests/baselines/reference/libTypeScriptSubfileResolvingConfig.errors.txt
/somepath/index.ts(6,1): error TS2304: Cannot find name 'window'.


==== /somepath/tsconfig.json (0 errors) ====
    { }
==== /somepath/index.ts (1 errors) ====
    /// <reference lib="dom.iterable" />
    const a: DOMIterable = { abc: "Hello" }
    
    // This should fail because libdom has been replaced
    // by the module above ^
    window.localStorage
    ~~~~~~
!!! error TS2304: Cannot find name 'window'.
    
==== /somepath/node_modules/@typescript/lib-dom/index.d.ts (0 errors) ====
    // NOOP
==== /somepath/node_modules/@typescript/lib-dom/iterable.d.ts (0 errors) ====
    interface DOMIterable { abc: string }